added async GET methods

--- a/Aaks.Restclient/Aaks.Restclient.csproj
+++ b/Aaks.Restclient/Aaks.Restclient.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HttpRestClient.cs" />
-    <Compile Include="models\HttpResponse.cs" />
+    <Compile Include="Models\HttpResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
