added support for different request types

--- a/Aaks.Restclient/Aaks.Restclient.csproj
+++ b/Aaks.Restclient/Aaks.Restclient.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Aaks.Restclient</RootNamespace>
     <AssemblyName>Aaks.Restclient</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="HttpRestClient.cs" />
     <Compile Include="Models\HttpResponse.cs" />
+    <Compile Include="Oauth\OauthAuthenticationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
