--- a/Aaks.Restclient/Aaks.Restclient.csproj
+++ b/Aaks.Restclient/Aaks.Restclient.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Aaks.Restclient</RootNamespace>
     <AssemblyName>Aaks.Restclient</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HttpRestClient.cs" />
+    <Compile Include="IHttpRestClient.cs" />
     <Compile Include="Models\HttpResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
