--- a/Aaks.Restclient/Aaks.Restclient.csproj
+++ b/Aaks.Restclient/Aaks.Restclient.csproj
@@ -43,10 +43,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\AuthorizationTypes.cs" />
+    <Compile Include="Enums\RequestType.cs" />
     <Compile Include="Enums\ResponseType.cs" />
     <Compile Include="Exceptions\HttpException.cs" />
     <Compile Include="HttpRestClient.cs" />
     <Compile Include="IHttpRestClient.cs" />
+    <Compile Include="Models\HttpPostRequest.cs" />
     <Compile Include="Models\HttpRequest.cs" />
     <Compile Include="Models\HttpResponse.cs" />
     <Compile Include="Oauth\OauthAuthenticationManager.cs" />
